ICU-23072 Support from JDK 11 up, drop support for JDK 8