@@ -43,14 +43,15 @@
 
     <module>demos</module>
     <module>samples</module>
+    <module>tools/build</module>
     <module>tools/misc</module>
+    <module>tools/taglets</module>
     <module>perf-tests</module>
   </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.release>11</maven.compiler.release>
 
     <maven-central-repo-url>https://oss.sonatype.org</maven-central-repo-url>
     <maven-central-releases-repo-url>${maven-central-repo-url}/service/local/staging/deploy/maven2</maven-central-releases-repo-url>
@@ -198,14 +199,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.13.0</version>
-          <!-- Plugin bug, maven.compiler.* properties are not honored, see
-            https://issues.apache.org/jira/browse/MCOMPILER-545
-          -->
-          <configuration>
-            <source>${maven.compiler.source}</source>
-            <target>${maven.compiler.target}</target>
-          </configuration>
+          <version>3.14.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -323,6 +317,9 @@
                   <requireMavenVersion>
                     <version>3.6.3</version>
                   </requireMavenVersion>
+                  <requireJavaVersion>
+                    <version>[11,)</version>
+                  </requireJavaVersion>
                 </rules>
               </configuration>
             </execution>
@@ -658,36 +655,10 @@
       </build>
     </profile>
 
-    <!-- Starting with JDK 9, the Java compiler supports the −−release version.
-      Unlike source (checking the language features) and target (the version of the classes generated),
-      this option also checks that newer APIs are not used.
-        https://maven.apache.org/plugins/maven-compiler-plugin/examples/set-compiler-release.html
-      Would be nice if the maven-compiler-plugin would filter this out below JDK 9, but it does not.
-      So we must use an auto-activated profile for this option.
-    -->
     <profile>
-      <id>newer_jdk</id>
-      <activation>
-        <jdk>[9,)</jdk>
-      </activation>
-      <modules>
-         <module>tools/build</module>
-         <module>tools/taglets</module>
-      </modules>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <release>8</release>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
-      <!-- mvn test -ntp -DskipTests -DskipITs -P errorprone -->
+      <!-- mvn clean test -ntp -DskipTests -DskipITs -l errorprone.log -P errorprone
+      Then inspect the content of the errorprone.log file.
+      We will have some script to convert that to a more friendly format (likely html) -->
       <id>errorprone</id>
       <build>
         <plugins>
@@ -695,11 +666,10 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-              <source>${maven.compiler.source}</source>
-              <target>${maven.compiler.target}</target>
-              <encoding>UTF-8</encoding>
-              <!-- Use <compilerArg> to pass flags to errorprone. See https://errorprone.info/docs/flags -->
               <showWarnings>true</showWarnings>
+              <failOnError>false</failOnError>
+              <fork>true</fork>
+              <!-- Use <compilerArg> to pass flags to errorprone. See https://errorprone.info/docs/flags -->
               <compilerArgs>
                 <arg>-XDcompilePolicy=simple</arg>
                 <!--
@@ -709,6 +679,18 @@
                     The drawback is that there are not errors now, they get mixed with the real warnings.
                 -->
                 <arg>-Xplugin:ErrorProne -XepAllErrorsAsWarnings</arg>
+                <arg>-Xmaxerrs</arg>
+                <arg>10000</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
               </compilerArgs>
               <annotationProcessorPaths>
                 <path>
